# dapps-sharded-fungible-token

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  logparser.py
.github/workflows/: build.yml  release.yml
ft-logic/: Cargo.toml  ft_logic.meta.txt  meta.txt
ft-logic/io/: Cargo.toml
ft-logic/io/src/: instruction.rs  lib.rs
ft-logic/src/: instruction.rs  lib.rs  messages.rs
ft-main/: Cargo.toml  ft_main.meta.txt  meta.txt
ft-main/io/: Cargo.toml
ft-main/io/src/: lib.rs
ft-main/src/: lib.rs
ft-main/tests/: benchmarks.rs  high_load_tests.rs  node-test.rs  token_tests.rs  utils.rs
ft-storage/: Cargo.toml  build.rs  meta.txt
ft-storage/io/: Cargo.toml
ft-storage/io/src/: lib.rs
ft-storage/src/: lib.rs
