[workspace]
resolver = "2"
members = [
    "ft-logic",
    "ft-main",
    "ft-storage",
]

[patch.crates-io]
# Two dependecies below goes for `subxt v0.22.0`
sp-core = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
sp-runtime = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }