[workspace]
resolver = "2"
members = [
    "ft-logic",
    "ft-main",
    "ft-storage",
]

[workspace.package]
version = "2.1.3"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v0.2.1" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v0.2.1" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v0.2.1" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v0.2.1" }
gstd = { git = "https://github.com/gear-tech/gear", tag = "v0.2.1" }
sp-core = { git = "https://github.com/gear-tech/substrate.git", rev = "36699c4478ce8ae05517bb42a1b115403313e083" }
ft-logic-io.path = "ft-logic/io"
ft-main-io.path = "ft-main/io"
ft-storage-io.path = "ft-storage/io"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
hashbrown = "0.13"
primitive-types = { version = "0.12", default-features = false, features = ["scale-info"]}
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.8" }
tokio = "1"
light_sr25519 = { git = "https://github.com/gear-tech/gear.git", tag = "v0.2.1" }
