[package]
name = "ft-logic"
version = "0.1.2"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable", features = ["debug"] }
ft-logic-io = { path = "io" }
ft-storage-io = { path = "../ft-storage/io" }
primitive-types = { version = "0.12.0", default-features = false, features = ["scale-info"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
