[package]
name = "ft-logic"
version = "0.1.1"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "stable" }
ft-logic-io = { path = "io" }
ft-storage-io = { path = "../ft-storage/io" }
primitive-types = { version = "0.12.0", default-features = false, features = ["scale-info"]}
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hashbrown = "0.12.3"

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
tokio = { version = "1.21.2", features = ["full"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
