[package]
name = "ft-main"
version = "0.1.3"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
ft-logic-io = { path = "../ft-logic/io" }
ft-main-io = { path = "io" }
primitive-types = { version = "0.12.1", default-features = false }
sp-core-hashing = { version = "5.0.0", default-features = false }
hashbrown = { version = "0.13.1" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }
