[package]
name = "ft-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
ft-storage-io = { path = "io" }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}
sp-core-hashing = { version = "4.0.0", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }