[package]
name = "ft-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
ft-storage-io = { path = "io" }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }