[package]
name = "ft-storage"
version = "2.1.2"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
ft-storage-io = { path = "io" }
primitive-types = { version = "0.12", default-features = false }
hashbrown = { version = "0.13" }

[build-dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07ed34df6cf76f09d6c34834b5bd74e352d" }
ft-storage-io = { path = "io" }
