[package]
name = "ft-logic-io"
version = "2.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "3", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "academy-v0.1.0" }
scale-info = { version = "2", default-features = false }
primitive-types = { version = "0.12", default-features = false }
hashbrown = { version = "0.13" }
gmeta = {  git = "https://github.com/gear-tech/gear.git", branch = "academy-v0.1.0"}
ft-storage-io = { path = "../../ft-storage/io" }
ft-main-io = { path = "../../ft-main/io" }
